Fixed bug #46419 (Elements of associative arrays with NULL value are lost)